# NLP

./: .env  .gitignore  README.md  app.py  ingest.py  pyproject.toml  requirements.txt  temp.ipynb
data/it_docs/: support_tickets.json
src/: agent_brain.py  data_loader.py  embedding.py  search.py  tools.py  vectorstore.py
